--- a/src/oc/platformBundle/Resources/config/services.yml
+++ b/src/oc/platformBundle/Resources/config/services.yml
@@ -1,4 +1,5 @@
+# src/OC/PlatformBundle/Resources/config/services.yml
+
 services:
-#    ocplatform.example:
-#        class: oc\platformBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
+    oc_platform.antispam:
+        class: oc\platformBundle\Antispam\ocAntispam
